trunk/Archive2/d2/517bcf4f9de91e/output
main.cpp:131:21: error: explicit specialization of non-template struct 'bit_not'
        template <> struct bit_not < void > {
                           ^       ~~~~~~~~
1 error generated.
